--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <base href="/">
         <title>Slackot</title>
-        <link rel="stylesheet" type="text/css" href="bower_components/angular/angular-csp.css">
-        <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="angular-csp.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+<!--         <script type="text/javascript">
+            if(!sessionStorage.getItem('loggedIn') && window.location.href.indexOf('login') === -1) {
+                window.location.href = '/login';
+            } else if(sessionStorage.getItem('loggedIn') && window.location.href.indexOf('login') !== -1) {
+                window.location.href = '/home';
+            }
+        </script> -->
     </head>
     <body ng-app="slackot">
         <div class="row">
@@ -13,7 +22,7 @@
                     <h1>Slackot!</h1>
                     <p>Slackot brings all your communication together in one place. It's real-time messaging app.</p>
                 </div>
-                <ul class="nav nav-pills">
+                <ul class="nav nav-pills" ng-hide="loginPage">
                     <li role="presentation" class="active"><a href="#">Home</a></li>
                     <li role="presentation"><a href="#">Profile</a></li>                    
                 </ul>
@@ -22,10 +31,15 @@
                 <div ng-view></div>
             </div>
         </div>
-        <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-        <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-        <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="jquery.min.js"></script>
+        <script type="text/javascript" src="angular.min.js"></script>
+        <script type="text/javascript" src="angular-route.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="socket.io/socket.io.js"></script>
+        <script type="text/javascript" src="js/config/config.js"></script>
+        <script type="text/javascript" src="js/controllers/home-controller.js"></script>
+        <script type="text/javascript" src="js/controllers/login-controller.js"></script>
+        <script type="text/javascript" src="js/controllers/room-controller.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
