screenshots and favicon added

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <base href="/">
         <title>Slackot</title>
+
+        <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64 96x96" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="angular-csp.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
